[gd_scene load_steps=28 format=2]

[ext_resource path="res://resources/themes/base_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menus/shop/shop_item.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/menus/shop/weapons_container.tscn" type="PackedScene" id=3]
[ext_resource path="res://mods-unpacked/arbuziki-ArbuzikiPack/ui/menus/extended_shop/shop_extended.gd" type="Script" id=4]
[ext_resource path="res://ui/menus/run/gold_icon.tscn" type="PackedScene" id=5]
[ext_resource path="res://mods-unpacked/arbuziki-ArbuzikiPack/ui/menus/extended_shop/shop_extended_items_container.gd" type="Script" id=6]
[ext_resource path="res://ui/menus/run/gold_label.gd" type="Script" id=7]
[ext_resource path="res://ui/menus/shop/button_with_icon.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/menus/shop/item_popup.tscn" type="PackedScene" id=9]
[ext_resource path="res://ui/menus/shop/reroll_button.gd" type="Script" id=10]
[ext_resource path="res://ui/menus/shop/shop_background.png" type="Texture" id=11]
[ext_resource path="res://ui/menus/shop/stats_container.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/menus/global/my_menu_button.gd" type="Script" id=13]
[ext_resource path="res://ui/menus/ingame/pause_menu.tscn" type="PackedScene" id=14]
[ext_resource path="res://ui/menus/shop/synergy_container.tscn" type="PackedScene" id=15]
[ext_resource path="res://ui/menus/shop/items_container.tscn" type="PackedScene" id=16]
[ext_resource path="res://ui/menus/shop/stat_popup.tscn" type="PackedScene" id=17]
[ext_resource path="res://ui/menus/global/focus_manager.tscn" type="PackedScene" id=18]
[ext_resource path="res://resources/sounds/metal_small_movement_03.wav" type="AudioStream" id=19]
[ext_resource path="res://resources/sounds/metal_small_movement_06.wav" type="AudioStream" id=20]
[ext_resource path="res://ui/menus/ingame/challenge_completed_ui.tscn" type="PackedScene" id=21]
[ext_resource path="res://resources/fonts/actual/base/font_floating_text.tres" type="DynamicFont" id=22]
[ext_resource path="res://ui/menus/shop/elite_container.gd" type="Script" id=23]
[ext_resource path="res://items/global/inventory_element.tscn" type="PackedScene" id=24]
[ext_resource path="res://ui/icons/elite_icon.png" type="Texture" id=25]
[ext_resource path="res://ui/icons/horde_icon.png" type="Texture" id=26]
[ext_resource path="res://resources/fonts/actual/base/font_small_text.tres" type="DynamicFont" id=27]

[node name="ShopExtended" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
combine_sounds = [ ExtResource( 19 ) ]
recycle_sounds = [ ExtResource( 20 ) ]

[node name="FocusManager" parent="." instance=ExtResource( 18 )]

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 11 )
expand = true
__meta__ = {
"_edit_lock_": true
}

[node name="Content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Content"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 25

[node name="HBoxContainer" type="HBoxContainer" parent="Content/MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 1895.0
margin_bottom = 1612.0
custom_constants/separation = 25

[node name="ScrollContainer" type="ScrollContainer" parent="Content/MarginContainer/HBoxContainer"]
margin_right = 1461.0
margin_bottom = 1587.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Content/MarginContainer/HBoxContainer/ScrollContainer"]
margin_right = 1461.0
margin_bottom = 458.0
size_flags_horizontal = 3
custom_constants/separation = 50

[node name="HBoxContainer" type="HBoxContainer" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1461.0
margin_bottom = 82.0
rect_min_size = Vector2( 0, 82 )
alignment = 2

[node name="Title" type="Label" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_top = 18.0
margin_right = 236.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 22 )
text = "MENU_SHOP"

[node name="EmptySpace" type="Control" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 240.0
margin_right = 784.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="GoldUI" type="HBoxContainer" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
margin_left = 788.0
margin_right = 878.0
margin_bottom = 82.0
alignment = 1

[node name="GoldIcon" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/GoldUI" instance=ExtResource( 5 )]
margin_bottom = 82.0

[node name="GoldLabel" type="Label" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/GoldUI"]
margin_left = 68.0
margin_top = 18.0
margin_right = 90.0
margin_bottom = 63.0
custom_fonts/font = ExtResource( 22 )
text = "0"
script = ExtResource( 7 )

[node name="EmptySpace2" type="Control" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 882.0
margin_right = 1427.0
margin_bottom = 82.0
size_flags_horizontal = 3

[node name="RerollButton" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 8 )]
margin_left = 1431.0
margin_right = 1461.0
focus_neighbour_bottom = NodePath("../../HBoxContainer2/ShopItemsContainer/ShopItem4/PanelContainer/MarginContainer/VBoxContainer/BuyButton")
script = ExtResource( 10 )

[node name="HBoxContainer2" type="HBoxContainer" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 132.0
margin_right = 1461.0
margin_bottom = 132.0

[node name="ShopExtendedItemsContainer" type="Container" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer2"]
margin_right = 1461.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 6 )
_shop_item_prefab = ExtResource( 2 )
spacing = 8

[node name="HBoxContainer3" type="HBoxContainer" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 182.0
margin_right = 1461.0
margin_bottom = 458.0
size_flags_vertical = 3
custom_constants/separation = 25

[node name="ItemsContainer" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource( 16 )]
margin_top = 0.0
margin_right = 115.0
margin_bottom = 276.0

[node name="EmptySpace" type="ColorRect" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 140.0
margin_right = 1118.0
margin_bottom = 276.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponsContainer" parent="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer3" instance=ExtResource( 3 )]
margin_left = 1143.0
margin_top = 0.0
margin_right = 1461.0
margin_bottom = 276.0
nb_columns = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="Content/MarginContainer/HBoxContainer"]
margin_left = 1486.0
margin_right = 1870.0
margin_bottom = 1587.0
custom_constants/separation = 9

[node name="StatsContainer" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2" instance=ExtResource( 12 )]
margin_top = 0.0
margin_bottom = 1346.0
rect_min_size = Vector2( 384, 740 )

[node name="Secondary" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2/StatsContainer/MarginContainer/VBoxContainer2/HBoxContainer" index="1"]
focus_neighbour_right = NodePath("../../../../../GoButton")
focus_neighbour_bottom = NodePath("../../../../../GoButton")

[node name="HarvestingContainer" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2/StatsContainer/MarginContainer/VBoxContainer2/PrimaryStats" index="15"]
focus_neighbour_bottom = NodePath("../../../../../GoButton")

[node name="EmptySpace" type="Control" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2"]
modulate = Color( 1, 1, 1, 0 )
margin_top = 1355.0
margin_right = 384.0
margin_bottom = 1355.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EliteInfoPanel" type="PanelContainer" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 1364.0
margin_right = 384.0
margin_bottom = 1408.0
theme = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2/EliteInfoPanel"]
margin_left = 5.0
margin_top = 5.0
margin_right = 379.0
margin_bottom = 39.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="EliteInfobox" type="Label" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2/EliteInfoPanel/MarginContainer"]
unique_name_in_owner = true
margin_left = 5.0
margin_top = 5.0
margin_right = 369.0
margin_bottom = 29.0
custom_fonts/font = ExtResource( 27 )
text = "ELITE_APPEARING"
valign = 1
autowrap = true

[node name="EliteContainer" type="GridContainer" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_left = 384.0
margin_top = 1417.0
margin_right = 384.0
margin_bottom = 1513.0
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 8
columns = 4
script = ExtResource( 23 )
elite_icon = ExtResource( 25 )
horde_icon = ExtResource( 26 )

[node name="EliteElement" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2/EliteContainer" instance=ExtResource( 24 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 96.0
margin_bottom = 96.0
icon = ExtResource( 25 )

[node name="EliteElement2" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2/EliteContainer" instance=ExtResource( 24 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 96.0
margin_bottom = 96.0
icon = ExtResource( 25 )

[node name="EliteElement3" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2/EliteContainer" instance=ExtResource( 24 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 96.0
margin_bottom = 96.0
icon = ExtResource( 25 )

[node name="EliteElement4" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2/EliteContainer" instance=ExtResource( 24 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 96.0
margin_bottom = 96.0
icon = ExtResource( 25 )

[node name="GoButton" type="Button" parent="Content/MarginContainer/HBoxContainer/VBoxContainer2"]
margin_top = 1522.0
margin_right = 384.0
margin_bottom = 1587.0
focus_neighbour_top = NodePath("../../VBoxContainer/HBoxContainer2/ShopItemsContainer/ShopItem4/PanelContainer/MarginContainer/VBoxContainer/BuyButton")
size_flags_horizontal = 3
size_flags_vertical = 8
text = "MENU_GO"
script = ExtResource( 13 )

[node name="StatPopup" parent="Content" instance=ExtResource( 17 )]
visible = false
margin_left = 1403.0
margin_top = 50.0
margin_right = 1403.0
margin_bottom = 1030.0

[node name="BlockBackground" type="ColorRect" parent="Content"]
visible = false
modulate = Color( 1, 1, 1, 0.686275 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemPopup" parent="Content" instance=ExtResource( 9 )]
visible = false
margin_left = -190.5
margin_top = -134.5
margin_right = 190.5
margin_bottom = 134.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SynergyPopup" parent="Content" instance=ExtResource( 15 )]
visible = false

[node name="ChallengeCompletedUI" parent="Content" instance=ExtResource( 21 )]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource( 14 )]
pause_mode = 2
visible = false
focus_mode = 2

[connection signal="focus_entered" from="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/RerollButton" to="." method="_on_RerollButton_focus_entered"]
[connection signal="pressed" from="Content/MarginContainer/HBoxContainer/ScrollContainer/VBoxContainer/HBoxContainer/RerollButton" to="." method="_on_RerollButton_pressed"]
[connection signal="pressed" from="Content/MarginContainer/HBoxContainer/VBoxContainer2/GoButton" to="." method="_on_GoButton_pressed"]

[editable path="Content/MarginContainer/HBoxContainer/VBoxContainer2/StatsContainer"]
